<?xml version="1.0" encoding="utf-8"?>
<com.zycoo.android.zphone.ui.dialpad.DialerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_digit_dialer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="@dimen/right_panel_margin_vertical"
    android:paddingTop="@dimen/right_panel_margin_vertical">

    <LinearLayout
        android:layoutDirection="ltr"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@color/grey_100"
        android:gravity="center">

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/dial_call_log_segmented"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/call_log_all_call"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/all_call"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/call_log_out_call"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/out_call"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/call_log_in_call"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/in_call"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/call_log_miss_call"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/miss_call"
                style="@style/RadioButton" />
        </info.hoang8f.android.segmented.SegmentedGroup>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey_200" />

    <RelativeLayout
        android:id="@+id/topField"
        android:layout_width="fill_parent"
        style="@style/digits_edit_text_height"
        android:layout_marginBottom="0dip"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="0dip">

        <LinearLayout

            android:id="@+id/account_choose_bt"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            >
            <Spinner
                android:id="@+id/spinnerAdapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/gravity_bottom_end" />
        </LinearLayout>

        <View
            android:layout_toStartOf="@id/account_choose_bt"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/grey_200" />

        <com.zycoo.android.zphone.ui.dialpad.DigitsEditText
            android:id="@+id/digitsText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/account_choose_bt"
            android:layout_toLeftOf="@id/account_choose_bt"
            android:gravity="center"
            android:imeActionLabel="call"
            android:imeOptions="actionGo"
            android:nextFocusRight="@+id/accountChooserButton"
            android:textAppearance="@style/DialtactsDigitsTextAppearance"
            android:textColor="@color/grey_700" />


        <TextView
            android:id="@+id/rewriteTextInfo"
            android:background="@color/grey_300"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="italic"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey_200" />
    <!-- Autocomplete -->
    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_weight="80"
        android:layout_height="0dp">

        <ListView
            android:id="@+id/autoCompleteList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:smoothScrollbar="true"
            android:verticalScrollbarPosition="left"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/dialPad_ll"
            android:layout_width="match_parent"
            style="@style/dial_pad_call_bar_height"
            android:orientation="vertical"
            android:visibility="invisible"
            android:layout_gravity="bottom">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey_200" />

            <com.zycoo.android.zphone.ui.dialpad.Dialpad
                android:id="@+id/dialPad"
                style="@style/dial_pad_height"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                 />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_200" />
            <com.zycoo.android.zphone.ui.dialpad.DialerCallBar
                android:id="@+id/dialerCallBar"
                android:layout_width="match_parent"
                style="@style/dial_call_bar_height"
                android:orientation="horizontal" />
        </LinearLayout>

        <com.faizmalkani.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_button"
            android:layout_width="72dp"
            android:layout_height="72dp"
            style="@style/gravity_bottom_end"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:color="@color/light_blue"
            app:drawable="@drawable/ic_dialpad_white" />
    </FrameLayout>
    <!-- Keypad section -->

</com.zycoo.android.zphone.ui.dialpad.DialerLayout>
